--- a/src/FlightComputer/CM4/.cproject
+++ b/src/FlightComputer/CM4/.cproject
@@ -61,6 +61,20 @@
                                 								
                                 <option id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.debuglevel.1924303502" name="Debug level" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.debuglevel" value="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.debuglevel.value.g3" valueType="enumerated"/>
                                 								
+                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.definedsymbols.1156183568" name="Define symbols (-D)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.definedsymbols" valueType="definedSymbols">
+                                    									
+                                    <listOptionValue builtIn="false" value="LV_CONF_INCLUDE_SIMPLE=1"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="STM32H745xx"/>
+                                    								
+                                </option>
+                                								
+                                <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.includepaths.320388280" name="Include paths (-I)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.includepaths" valueType="includePath">
+                                    									
+                                    <listOptionValue builtIn="false" value="../Core/Startup"/>
+                                    								
+                                </option>
+                                								
                                 <inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.249877097" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
                                 							
                             </tool>
@@ -80,6 +94,12 @@
                                     <listOptionValue builtIn="false" value="DEBUG"/>
                                     									
                                     <listOptionValue builtIn="false" value="STM32H745xx"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="ARDUINO=301"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="STM32H7xx"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="LV_CONF_INCLUDE_SIMPLE=1"/>
                                     								
                                 </option>
                                 								
@@ -96,6 +116,20 @@
                                     <listOptionValue builtIn="false" value="../../Drivers/CMSIS/Include"/>
                                     									
                                     <listOptionValue builtIn="false" value="../../Common/Inc"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../Arduino/Cores"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../Arduino/Cores/stm32"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../Arduino/Cores/stm32/LL"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../Arduino/Cores/stm32/OpenAMP"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../Arduino/Cores/stm32/usb"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../Arduino/Variants"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../Arduino/Libraries"/>
                                     								
                                 </option>
                                 								
@@ -121,7 +155,21 @@
                                     									
                                     <listOptionValue builtIn="false" value="../../Drivers/CMSIS/Include"/>
                                     									
-                                    <listOptionValue builtIn="false" value="../../Common/inc"/>
+                                    <listOptionValue builtIn="false" value="../../Common/Inc"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../Arduino/Cores"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../Arduino/Cores/stm32"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../Arduino/Cores/stm32/LL"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../Arduino/Cores/stm32/OpenAMP"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../Arduino/Cores/stm32/usb"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../Arduino/Variants"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="../../Arduino/Libraries"/>
                                     								
                                 </option>
                                 								
@@ -134,6 +182,14 @@
                                     <listOptionValue builtIn="false" value="DEBUG"/>
                                     									
                                     <listOptionValue builtIn="false" value="STM32H745xx"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="ARDUINO=301"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="STM32H7xx"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="LV_CONF_INCLUDE_SIMPLE=1"/>
+                                    									
+                                    <listOptionValue builtIn="false" value="USE_MODEL_A=1"/>
                                     								
                                 </option>
                                 								
@@ -191,11 +247,23 @@
                         					
                     </folderInfo>
                     					
+                    <fileInfo id="com.st.stm32cube.ide.mcu.gnu.managedbuild.config.exe.debug.2133903286.560559100" name="startup_stm32h745iitx.s" rcbsApplicability="disable" resourcePath="Core/Startup/startup_stm32h745iitx.s" toolsToInvoke="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.1030699630.702320003">
+                        						
+                        <tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.1030699630.702320003" name="MCU GCC Assembler" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.1030699630">
+                            							
+                            <inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input.877329745" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.input"/>
+                            						
+                        </tool>
+                        					
+                    </fileInfo>
+                    					
                     <sourceEntries>
+                        						
+                        <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Arduino"/>
                         						
                         <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Common"/>
                         						
-                        <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
+                        <entry excluding="Startup/startup_stm32h745iitx.s|Src/adc.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
                         						
                         <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
                         					
@@ -397,7 +465,7 @@
                         						
                         <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Common"/>
                         						
-                        <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
+                        <entry excluding="Src/adc.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
                         						
                         <entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
                         					
